--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shredded Seeker | iTunes </title>
+    <link rel="icon" href="./images/logo2.png">
+    <title>SHREDDED FINDER | iTunes </title>
     <link rel="stylesheet" href="styles.css">
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
     <nav>
-        <h1>SHREDDED SEEKER</h1>
+        <h1>SHREDDED FINDER</h1>
         <img src="" alt="">
         <div class="search-box">
-            <p>Busca tu artista, canción o álbum favorito.</p>
+            <p>La enciclopedia más grande de música.</p>
             <input type="text" id="searchTerm">
-            <button id="searchTermBtn">Search</button>
+            <button id="searchTermBtn">🔍</button>
         </div>
     </nav>
-    <hr>
-    <main id="songs"></main>
-    <footer>
+    <main id="songs">
+        <div id="content-container">
+            <p>Realiza una búsqueda para encontrar tus canciones favoritas.</p>
+            <img src="./images/handshake-man-and-devil-symbolizes-risky-deal-or-dangerous-business-arrangement-png.webp" alt="">
+        </div>
+    </main>
 
-    </footer>
     <script src="finder.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
