--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./images/logo2.png">
     <title>SHREDDED FINDER | iTunes </title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -27,6 +28,27 @@
             <img src="./images/handshake-man-and-devil-symbolizes-risky-deal-or-dangerous-business-arrangement-png.webp" alt="">
         </div>
     </main>
+
+    <footer>
+        <div class="row">
+            <p>Made by Shreddedhuman.</p>
+        </div>
+        <div class="row">
+            <ul class="social-links">
+                <li><a href="https://www.facebook.com/itunes/" target="_blank"><i class="fa fa-facebook-square"
+                            aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com/applemusic/?hl=es" target="_blank"><i class="fa fa-instagram"
+                            aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/itunes?lang=es" target="_blank"><i class="fa fa-twitter"
+                    aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
+        <div class="row">
+            <p>
+                &copy;iTunes. 
+            </p>
+        </div>
+    </footer>
 
     <script src="finder.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
