fix: :lipstick: Styles update
Cambio en la interfaz.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <main id="songs">
         <div id="content-container">
             <p>Realiza una búsqueda para encontrar tus canciones favoritas.</p>
-            <img src="./images/handshake-man-and-devil-symbolizes-risky-deal-or-dangerous-business-arrangement-png.webp" alt="">
+            <img src="./images/handshake-man-and-devil-symbolizes-risky-deal-or-dangerous-business-arrangement-png.webp"
+                alt="">
         </div>
     </main>
 
@@ -40,12 +41,12 @@
                 <li><a href="https://www.instagram.com/applemusic/?hl=es" target="_blank"><i class="fa fa-instagram"
                             aria-hidden="true"></i></a></li>
                 <li><a href="https://twitter.com/itunes?lang=es" target="_blank"><i class="fa fa-twitter"
-                    aria-hidden="true"></i></a></li>
+                            aria-hidden="true"></i></a></li>
             </ul>
         </div>
         <div class="row">
             <p>
-                &copy;iTunes. 
+                &copy;iTunes.
             </p>
         </div>
     </footer>
